deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-gateway
  namespace: drone
spec:
  selector:
    matchLabels:
      app: mqtt-gateway
  template:
    metadata:
      labels:
        app: mqtt-gateway
    spec:
      containers:
        - name: mqtt-gateway
          image: nowzarifarhad/mqtt-gateway:1.0.1
          ports:
            - containerPort: 5108
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-gateway
  namespace: drone
spec:
  selector:
    app: mqtt-gateway
  ports:
  - port: 5108
    targetPort: 5108
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-gateway
  namespace: drone
  labels:
    name: mqtt-gateway
  annotations:
    cert-manager.io/cluster-issuer: acme-cluster-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - drone.farhadnowzari.dev
      secretName: drone-tls
  rules:
  - host: drone.farhadnowzari.dev
    http:
      paths:
      - pathType: Prefix
        path: "/api(/|$)(.*)"
        backend:
          service:
            name: mqtt-gateway
            port: 
              number: 5108
